# anstoss3k-poc

./: .coveragerc  .env_vars  .gitignore  .pylintrc  .sonarcloud.properties  .travis.yml  README.md  requirements.txt  setup.cfg
anstoss3k/engine/: definitions.py  engine.py
anstoss3k/engine/states/: match_day_preview.py  match_day_results.py  match_day_tables.py  progress_week.py  team_selection.py
anstoss3k/ui/: definitions.py  menu.py
anstoss3k/ui/states/: matchday_preview.py  matchday_result.py  matchday_tables.py  season_end.py  team_selection.py  week_progress.py
dev/: profile_PYTHON_PROG.bat
dev/Linting/: RunBandit.bat  RunBandit.sh  RunMyPy.bat  RunMyPy.sh  RunPycodestyle.bat  RunPycodestyle.sh  RunPydocstyle.bat  RunPydocstyle.sh  RunPylint.bat  RunPylint.sh
dev/Packaging/: upload_to_pypi.bat  upload_to_pypi_test.bat
dev/Testing/: RunPytest.bat  RunPytest.sh
tests/anstoss3k/: test_project_logger.py
tests/anstoss3k/engine/: test_engine.py
tests/anstoss3k/engine/states/: test_match_day_preview.py  test_match_day_results.py  test_progress_week.py
tests/anstoss3k/integration_tests/: test_season.py
tests/engine/: test_engine.py
tests/engine/states/: test_match_day_preview.py  test_match_day_tables.py  test_progress_week.py  test_team_selection.py
tests/integration_tests/: test_season.py
